# python-fastapi-hello-word

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  pr.yml
src/: entrypoint.sh
src/myservice/: main.py  settings.py
tests/: test_myservice.py
