[tool.poetry]
name = "python-fastapi-hello-word"
version = "0.1.0"
description = "FastAPI hello-world example API using uvicorn."
authors = ["Samuel MARLHENS <samuel.marlhens@gmail.com>"]
packages = [
    { include = "*", from = "src" }
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smarlhens/python-fastapi-hello-word#readme"
repository = "https://github.com/smarlhens/python-fastapi-hello-word"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.78.0"
uvicorn = "0.17.6"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"
isort = "5.10.1"
black = "22.3.0"
flake8 = "4.0.1"
mypy = "0.961"
bandit = "1.7.4"
docformatter = "1.4"
requests = "2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
backend-path = ["src"]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"
pythonpath = [
    ".", "src",
]

[tool.black]
line_length = 90
target_version = ['py310']

[tool.isort]
skip = ["venv", ".venv"]
line_length = 90
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "TESTS", "LOCALFOLDER"]
known_tests = "tests"

[mypy]
files = ["src"]
strict_optional = false
